# plcache

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  Justfile  README.md  ci_venv.sh  make_ci_venv.sh  mise.toml  pyproject.toml  stub_gen.py  stub_gen.sh
.ci_venv/checksums/: _venv_lib_python3_13_site-packages_polars_polars_abi3_so.checksum  python-install_lib_libpython3_13_so_1_0.checksum
.stubs/: venv_state.checksum
.stubs/checksums/: lib_python3_13_site-packages_charset_normalizer_md__mypyc_cpython-313-x86_64-linux-gnu_so.checksum  lib_python3_13_site-packages_charset_normalizer_md_cpython-313-x86_64-linux-gnu_so.checksum
examples/advanced/: README.md  advanced_usage.py
examples/basic/: README.md  basic_usage.py
examples/perf/: README.md  performance_comparison.py
src/plcache/: __init__.py  _debugging.py  _dummy.py  config_dataclasses.py  decorator.py  path_manager.py  paths.py  symlink_manager.py  symlinks.py  types.py
stubs/: venv_state.checksum
tests/: README.md  advanced_test.py  basic_test.py  configuration_test.py  conftest.py  custom_callbacks_test.py  direct_class_test.py  directory_structure_test.py  more_tests.py  symlinks_test.py  test_basic.py
