[project]
name = "polars-diskcache"
version = "0.1.0"
description = "A diskcache decorator for Polars DataFrames and LazyFrames that saves function results as Parquet files"
readme = "README.md"
authors = [{ name = "Louis Maddox", email = "louismmx@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["diskcache>=5.6.3", "ty-extensions>=0.1.0"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = ["polars>=1.32.2"]
debug = ["pysnooper>=1.2.3"]
test = ["pytest>=8.4.1"]

[tool.uv]
default-groups = ["dev", "debug", "test"]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google" # or "numpy" if you prefer
